# Gravity

./: Cargo.toml  LICENSE  README.md  Rules.md  package_app.sh  sample_rules.json
gravity-cli/: Cargo.toml
gravity-cli/src/: main.rs
gravity-core/: Cargo.toml
gravity-core/src/: engine.rs  fs.rs  lib.rs  transaction.rs
gravity-core/src/models/: mod.rs
gravity-core/tests/: property_tests.rs
gui/: Package.swift
gui/.swiftpm/xcode/package.xcworkspace/xcuserdata/abeynicholas.xcuserdatad/: UserInterfaceState.xcuserstate
gui/.swiftpm/xcode/xcuserdata/abeynicholas.xcuserdatad/xcschemes/: xcschememanagement.plist
gui/GravityRename/: Bridge.swift  ContentView.swift  GravityRenameApp.swift  gravity-cli
