[package]
name = "gravity-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
unicode-normalization = "0.1"
thiserror = "1.0"
pathdiff = "0.2"
rayon = "1.8"
kamadak-exif = "0.5"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
